--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-simple-sidenav": "^2.0.0"
+    "react-simple-sidenav": "^2.0.0",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
